feat: utillity max-width wrapper add

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -973,7 +973,7 @@ a.text-center.btn.btn-outline-light.btn__book {
 
 */
 
-.col-12 {
+.col-max-800 {
     max-width: 800px;
     margin: 0 auto;
 }
